addaptive about statistic

--- a/about.html
+++ b/about.html
@@ -97,13 +97,25 @@
 
             <div class="statistic__block-third about__statistic-block">
               <!-- <h2 class="title statistic__title">аперо - це <span class="statistic__title-orange">українська душа</span>  та європейська </br>якість</h2> -->
-              <p class="text statistic__text">Для виробничих процесів використовується сучасне імпортне обладнання.</br> Цілодобовий контроль якості, ефективний моніторинг та менеджмент </br> дозволяють компанії бути на крок попереду конкурентів та реалізовувати </br> великі об’єми харчових продуктів власного виробництва!</p>
+              <p class="text statistic__text">Для виробничих процесів ми використовуємо сучасне імпортне обладнання. Цілодобовий контроль якості, ефективний моніторинг та менеджмент дозволяють компанії бути на крок попереду конкурентів та реалізовувати великі об’єми харчових продуктів власного виробництва!</p>
               <!-- <a href="#" class="section__link statistic__link">Дізнатися більше</a>  -->
             </div>
 
-            <img class="statistic__image" src="./images/about-img.png" alt="production">
-     </section>
- 
+          </section>
+
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about-desktop-1x-min_vmy7mq.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/about-desktop-2x-min_zeycna.png 2x" 
+              media="(min-width: 1440px)" />
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about-tablet-1x-min_wh8kda.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/about-tablet-2x-min_qumuhm.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" />
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about-mob-1x-min_uf0dnt.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about-mob-2x-min_kmjg3p.png 2x" 
+              media="(max-width: 743px)"/>
+             <img class="statistic__image"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about-mob-1x-min_uf0dnt.png"  alt="production"  />
+            </picture>
+
     <section class="container about__production-container">
       <div class="about__production__container-grey">
         <p class="title about__production-title">аперо це також</p>
@@ -112,18 +124,30 @@
       <div class="about__production__container-white">
         <div class="about__production__text-container">
           <span class="about__production-number number">1000+</span>
-          <span class="about__production-text text">кв.м. власних </br> складських приміщень</span>
+          <span class="about__production-text text">кв.м. власних складських приміщень</span>
         </div>
         <div class="about__production__text-container">
           <span class="about__production-number number">800+</span>
-          <span class="about__production-text text">кв.м. власних </br> виробничих приміщень</span>
+          <span class="about__production-text text">кв.м. власних виробничих приміщень</span>
         </div>
         <div class="about__production__text-container">
           <span class="about__production-number number">40+</span>
-          <span class="about__production-text text">досвідчених фахівців у </br>нашій команді</span>
+          <span class="about__production-text text">досвідчених фахівців у нашій команді</span>
         </div>
       </div>
-      <img class="about__production-image" src="./images/about-baget.png" alt="snex" >
+      <picture>
+        <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/baget-desktop-1x-min_arssx5.png 1x,
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/baget-desktop-2x-min_sjj3y6.png 2x" 
+        media="(min-width: 1440px)" />
+        <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992943/apero/about/baget-tablet-1x-min_mntwlx.png 1x,
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992944/apero/about/baget-tablet-2x-min_v1e4of.png 2x" 
+        media="(min-width: 744px) and (max-width: 1439px)" />
+        <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/baget-mob-1x-min_mplkgf.png 1x,
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/baget-mob-2x-min_cloqs1.png 2x" 
+        media="(max-width: 743px)"/>
+       <img class="about__production-image"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/baget-mob-1x-min_mplkgf.png"  alt="production"  />
+      </picture>
+      <!-- <img class="about__production-image" src="./images/about-baget.png" alt="snex" > -->
     </section>
     
     <section class="container__grey">
