--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
               <p class="text">Компанія розвивається рік за роком. В 2021 року підприємство АПЕРО звітує щодо наступних показників, що вказують на стрімкий розвиток українського виробника харчової продукції</p>
           </div>
         </div>
-        <h2 class="title about__history-title">Вже понад <span class="orange">7 років</span> в мальовничому</br> селищі Глибока, виробляються </br> <span class="orange">найсмачніші</span> солоні та солодкі <span class="orange">снеки</span> </br>із <span class="orange">української</span> кукурудзи</h2>
+        <h2 class="title about__history-title">Вже понад <span class="orange">7 років</span> в мальовничому селищі Глибока, виробляються <span class="orange">найсмачніші</span> солоні та солодкі <span class="orange">снеки</span> із <span class="orange">української</span> кукурудзи</h2>
       </div>
 
     </section>
