--- a/about.html
+++ b/about.html
@@ -235,7 +235,19 @@
           <p class="text">100% впевненість в складі та смаку снеків</p>
         </li>
        </ul>
-       <img class="sticks__image" src="./images/about-sticks.png" alt="sticks">
+       <picture>
+        <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992944/apero/about/baget-white-desktop-1x-min_tctuyz.png 1x,
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992944/apero/about/baget-white-desktop-2x-min_vw3fae.png 2x" 
+        media="(min-width: 1440px)" />
+        <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-tablet-1x-min_vathr6.png 1x,
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-tablet-2x-min_ptk1pt.png 2x" 
+        media="(min-width: 744px) and (max-width: 1439px)" />
+        <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-mob-1x-min_evd3wj.png 1x,
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-mob-2x-min_gkxsew.png 2x" 
+        media="(max-width: 743px)"/>
+       <img class="sticks__image"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-mob-1x-min_evd3wj.png"  alt="production"  />
+      </picture>
+       <!-- <img class="sticks__image" src="./images/about-sticks.png" alt="sticks"> -->
       </div>
 
     </section>
@@ -245,22 +257,22 @@
       <div class="about__product__block-first">
         <div class="about__product-block about__product__block-orange">
           <p class="about__product-text">попкорн</p>
-          <img class="image__popcorn" src="./images/about-popcorn.png" alt="popcorn">
+          <!-- <img class="image__popcorn" src="./images/about-popcorn.png" alt="popcorn"> -->
         </div>
         <div class="about__product-block about__product__block-blue">
           <p class="about__product-text">снеки</p>
-          <img class="image__snex" src="./images/about-snex.png" alt="snex">
+          <!-- <img class="image__snex" src="./images/about-snex.png" alt="snex"> -->
         </div>   
       </div>
 
       <div class="about__product__block-second">
         <div class="about__product-block about__product__block-yellow">
           <p class="about__product-text">кукурудзяні палички</p>
-          <img class="image__corn" src="./images/about-corn.png" alt="corn">
+          <!-- <img class="image__corn" src="./images/about-corn.png" alt="corn"> -->
         </div>
         <div class="about__product-block about__product__block-pink">
           <p class="about__product-text">подушечки та трубочки</p>
-          <img class="image__twin" src="./images/about-twin.png" alt="twin">
+          <!-- <img class="image__twin" src="./images/about-twin.png" alt="twin"> -->
         </div>   
       </div>
 
