page for partners

--- a/about.html
+++ b/about.html
@@ -325,8 +325,8 @@
       </div>
 
       <div class="about__product__block-third">
-        <p class="text">Наші снеки часто куштують діти, тому ми не</br> можемо ризикувати здоров’ям малечі, навпаки -</br> харчова продукція виготовляється із кукурудзяних</br> зерен добірного сорту та містить виключно</br> натуральний цукор</p>
-        <p class="title about__product-title">таким чином <span class="orange">снеки</span> стають відмінним </br><span class="orange">джерелом енергії</span>, сил та наснаги для </br>дорослих та дітей</p>
+        <p class="text">Наші снеки часто куштують діти, тому ми не можемо ризикувати здоров’ям малечі, навпаки - харчова продукція виготовляється із кукурудзяних зерен добірного сорту та містить виключно натуральний цукор</p>
+        <p class="title about__product-title">таким чином <span class="orange">снеки</span> стають відмінним <span class="orange">джерелом енергії</span>, сил та наснаги для дорослих та дітей</p>
       </div>
     </section>
 
