--- a/partner.html
+++ b/partner.html
@@ -34,8 +34,13 @@
            <li class="list"><a href="./partner.html" class="link nav__link  nav__link-second text">Партнерам</a></li>
            <li class="list"><a href="./contacts.html" class="link nav__link nav__link-second  text">Контакти</a></li>
        </ul>
-       <button type="button" class="header__button header__button-second modal-open">Отримати пропозицію</button>
       </nav>
+      <button type="button" class="button__mobile__menu">
+       <svg class="icon__menu__mobile icon__menu__mobile-second"  width="24" height="24">
+         <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
+       </svg>
+     </button>
+      <button type="button" class="header__button header__button-second modal-open">Отримати пропозицію</button>
 
     </div>
  </header>
@@ -45,38 +50,50 @@
   <section class="container partner__advantage-container">
     <!-- <div class="container"> -->
       <h2 class="title partner__title">Переваги співпраці з нами</h2>
-      <p class="subtitle partner__subtitle">Для торгових представників, оптових </br>клієнтів та дистрибюторів</p>
+      <p class="subtitle partner__subtitle">Для торгових представників, оптових клієнтів та дистрибюторів</p>
       <div class="advantages__container">
         <ul class="advantage__item">
           <li class="advantage__list list">
             <span class="advantage__number">/01</span>
-            <span class="advantage__text">Власна служба логістики</span>
-            <span class="text">Ми забезпечимо безкоштовну доставку Вашого</br> товару по Україні протягом 1-3 днів</span>
+            <div class="partner__block">
+              <span class="advantage__text">Власна служба логістики</span>
+              <span class="text">Ми забезпечимо безкоштовну доставку Вашого товару по Україні протягом 1-3 днів</span>
+            </div>
           </li>
           <li class="advantage__list list">
             <span class="advantage__number">/02</span>
-            <span class="advantage__text">Регулярне проведення маркетигових заходів</span>
-            <span class="text">Ми завжди підтримуємо торгову команду в </br> просуванні нашої продукції</span>
+            <div class="partner__block">
+              <span class="advantage__text">Регулярне проведення маркетигових заходів</span>
+              <span class="text">Ми завжди підтримуємо торгову команду в просуванні нашої продукції</span>
+            </div>
           </li>
           <li class="advantage__list list">
             <span class="advantage__number">/03</span>
-            <span class="advantage__text">Відтермінування оплати</span>
-            <span class="text">Можлива оплата з відстрочкою виплат</br> на 14-21 день </span>
+            <div class="partner__block">
+              <span class="advantage__text">Відтермінування оплати</span>
+              <span class="text">Можлива оплата з відстрочкою виплат на 14-21 день </span>
+            </div>
           </li>
           <li class="advantage__list list">
             <span class="advantage__number">/04</span>
-            <span class="advantage__text">Оновлення асортименту</span>
-            <span class="text">Ми постійно оновлюємо наш асортимент та</br> впроваджуємо нові технології виробництва</span>
+            <div class="partner__block">
+              <span class="advantage__text">Оновлення асортименту</span>
+              <span class="text">Ми постійно оновлюємо наш асортимент та впроваджуємо нові технології виробництва</span>
+            </div>
           </li>
           <li class="advantage__list list">
             <span class="advantage__number">/05</span>
-            <span class="advantage__text">Мала вага товару</span>
-            <span class="text">Це дозволить Вам економити паливо при </br>розвезенні продукції по торговим точкам </span>
+            <div class="partner__block">
+              <span class="advantage__text">Мала вага товару</span>
+              <span class="text">Це дозволить Вам економити паливо при розвезенні продукції по торговим точкам </span>
+            </div>
           </li>
           <li class="advantage__list list">
             <span class="advantage__number">/06</span>
-            <span class="advantage__text">Прямі поставки </br>якісних іграшок</span>
-            <span class="text">Кожна іграшка в нашому асортименті</br>сертифікована Європейською лабораторією СЕ</span>
+            <div class="partner__block">
+              <span class="advantage__text">Прямі поставки якісних іграшок</span>
+              <span class="text">Кожна іграшка в нашому асортименті сертифікована Європейською лабораторією СЕ</span>
+            </div>
           </li>
         </ul>
       </div>
