page for partners is addaptiveted

--- a/partner.html
+++ b/partner.html
@@ -57,42 +57,42 @@
             <span class="advantage__number">/01</span>
             <div class="partner__block">
               <span class="advantage__text">Власна служба логістики</span>
-              <span class="text">Ми забезпечимо безкоштовну доставку Вашого товару по Україні протягом 1-3 днів</span>
+              <span class="text advantage__description">Ми забезпечимо безкоштовну доставку Вашого товару по Україні протягом 1-3 днів</span>
             </div>
           </li>
           <li class="advantage__list list">
             <span class="advantage__number">/02</span>
             <div class="partner__block">
               <span class="advantage__text">Регулярне проведення маркетигових заходів</span>
-              <span class="text">Ми завжди підтримуємо торгову команду в просуванні нашої продукції</span>
+              <span class="text advantage__description">Ми завжди підтримуємо торгову команду в просуванні нашої продукції</span>
             </div>
           </li>
           <li class="advantage__list list">
             <span class="advantage__number">/03</span>
             <div class="partner__block">
               <span class="advantage__text">Відтермінування оплати</span>
-              <span class="text">Можлива оплата з відстрочкою виплат на 14-21 день </span>
+              <span class="text advantage__description">Можлива оплата з відстрочкою виплат на 14-21 день </span>
             </div>
           </li>
           <li class="advantage__list list">
             <span class="advantage__number">/04</span>
             <div class="partner__block">
               <span class="advantage__text">Оновлення асортименту</span>
-              <span class="text">Ми постійно оновлюємо наш асортимент та впроваджуємо нові технології виробництва</span>
+              <span class="text advantage__description">Ми постійно оновлюємо наш асортимент та впроваджуємо нові технології виробництва</span>
             </div>
           </li>
           <li class="advantage__list list">
             <span class="advantage__number">/05</span>
             <div class="partner__block">
               <span class="advantage__text">Мала вага товару</span>
-              <span class="text">Це дозволить Вам економити паливо при розвезенні продукції по торговим точкам </span>
+              <span class="text advantage__description">Це дозволить Вам економити паливо при розвезенні продукції по торговим точкам </span>
             </div>
           </li>
           <li class="advantage__list list">
             <span class="advantage__number">/06</span>
             <div class="partner__block">
               <span class="advantage__text">Прямі поставки якісних іграшок</span>
-              <span class="text">Кожна іграшка в нашому асортименті сертифікована Європейською лабораторією СЕ</span>
+              <span class="text advantage__description">Кожна іграшка в нашому асортименті сертифікована Європейською лабораторією СЕ</span>
             </div>
           </li>
         </ul>
@@ -110,9 +110,47 @@
         </svg>
       </button>
       <div class="images__container">
-        <img src="https://res.cloudinary.com/ddtdtthqh/apero/products-partners/konstruktor.png" alt="">
+        <picture>
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/popcorn-desktop-1x-min_tryrzi.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/popcorn-desktop-2x-min_hqjytr.png 2x" 
+          media="(min-width: 1440px)" />
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070684/apero/be-our-partners/popcorn-tablet-1x-min_yig8q2.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070684/apero/be-our-partners/popcorn-tablet-2x-min_rycu8t.png 2x" 
+          media="(min-width: 744px) and (max-width: 1439px)" />
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/popcorn-mob-1x-min_imk6ka.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070683/apero/be-our-partners/popcorn-mob-2x-min_plrb7r.png 2x" 
+          media="(max-width: 743px)"/>
+         <img  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/popcorn-mob-1x-min_imk6ka.png"  alt="production"  />
+        </picture>
+
+        <picture>
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor-desktop-1x-min_kipzwe.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor-desktop-2x-min_crnlku.png 2x" 
+          media="(min-width: 1440px)" />
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+          media="(min-width: 744px) and (max-width: 1439px)" />
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor_-mob-1x-min_dss4mb.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor-mob-2x-min_ekgxbq.png 2x" 
+          media="(max-width: 743px)"/>
+         <img  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor_-mob-1x-min_dss4mb.png"  alt="production"  />
+        </picture>
+        
+        <picture>
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733071294/apero/be-our-partners/bamboo-desktop-1x-min_kcbawd.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1733071294/apero/be-our-partners/bamboo-desktop-2x-min_jhqniv.png 2x" 
+          media="(min-width: 1440px)" />
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/bamboo-tablet-1x-min_ic4ham.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/bamboo-tablet-2x-min_jb8kif.png 2x" 
+          media="(min-width: 744px) and (max-width: 1439px)" />
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/bamboo-mob-1x-min_dw6ici.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/bamboo-mob-2x-min_y597k8.png 2x" 
+          media="(max-width: 743px)"/>
+         <img  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/bamboo-mob-1x-min_dw6ici.png"  alt="production"  />
+        </picture>
+        <!-- <img src="https://res.cloudinary.com/ddtdtthqh/apero/products-partners/konstruktor.png" alt="">
         <img src="https://res.cloudinary.com/ddtdtthqh/apero/products-partners/popcorn.png" alt="">
-        <img src="https://res.cloudinary.com/ddtdtthqh/apero/products-partners/bamboo.png" alt="">
+        <img src="https://res.cloudinary.com/ddtdtthqh/apero/products-partners/bamboo.png" alt=""> -->
      </div>
 
     <!-- </div> -->
