--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <div class="about__hero-block">
           <div class="about__hero__container">
             <p class="text about__text">провідний вітчизняний виробник високоякісної продукції із кукурудзи вирощеної в Україні</p>
-            <button class="button button__form partners__button modal-open">Стати партнером
+            <button class="button button__form about__hero__button modal-open">Стати партнером
               <svg width="40" height="40" class="hero-svg">
                 <use href="./images/symbol-defs.svg#icon-arrow-up-right"></use>
               </svg>
