--- a/contacts.html
+++ b/contacts.html
@@ -34,8 +34,13 @@
            <li class="list"><a href="./partner.html" class="link nav__link  nav__link-second text">Партнерам</a></li>
            <li class="list"><a href="./contacts.html" class="link nav__link nav__link-second  text">Контакти</a></li>
        </ul>
-       <button type="button" class="header__button header__button-second modal-open">Отримати пропозицію</button>
       </nav>
+      <button type="button" class="button__mobile__menu">
+       <svg class="icon__menu__mobile icon__menu__mobile-second"  width="24" height="24">
+         <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
+       </svg>
+     </button>
+      <button type="button" class="header__button header__button-second modal-open">Отримати пропозицію</button>
 
     </div>
  </header>
@@ -49,25 +54,25 @@
         <h3 class="title contacts__title white">Центральний офіс</h3>
         <ul class="contacts__item" >
           <li class="list contacts__list">
-            <svg class="footer__icon" width="24" height="24">
+            <svg class="footer__icon" width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-phone"></use>
             </svg>
             <a class="link text white" href="">+38 (066) 74 72 803</a>
           </li>
           <li class="list contacts__list">
-            <svg class="footer__icon" width="24" height="24">
+            <svg class="footer__icon"  width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-phone"></use>
             </svg>
             <a class="link text white" href="">+38 (096) 08 97 803</a>
           </li>
           <li class="list contacts__list">
-            <svg class="footer__icon" width="24" height="24">
+            <svg class="footer__icon"  width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-mail"></use>
             </svg>
             <a class="link text white" href="">office.apero@gmail.com</a>
           </li>
         </ul>
-        <svg class="contacts__icon" width="48" height="48">
+        <svg class="contacts__icon" >
           <use href="./images/symbol-defs.svg#icon-phone-orange"></use>
         </svg>
       </div>
@@ -87,7 +92,7 @@
             <a class="link text" href="">provision.apero@gmail.com</a>
           </li>
         </ul>
-        <svg class="contacts__icon" width="48" height="48">
+        <svg class="contacts__icon">
           <use href="./images/symbol-defs.svg#icon-phone-black"></use>
         </svg>
       </div>
@@ -107,7 +112,7 @@
             <a class="link text" href="">sales.apero@gmail.com</a>
           </li>
         </ul>
-        <svg class="contacts__icon" width="48" height="48">
+        <svg class="contacts__icon" >
           <use href="./images/symbol-defs.svg#icon-phone-black"></use>
         </svg>
       </div>
@@ -127,7 +132,7 @@
             <a class="link text" href="">export.apero@gmail.com</a>
           </li>
         </ul>
-        <svg class="contacts__icon" width="48" height="48">
+        <svg class="contacts__icon" >
           <use href="./images/symbol-defs.svg#icon-phone-black"></use>
         </svg>
       </div>
@@ -141,7 +146,7 @@
             <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, </br> вул. Валерія Красняна, 60к</a>
           </li>
         </ul>
-        <svg class="contacts__icon" width="48" height="48">
+        <svg class="contacts__icon" >
           <use href="./images/symbol-defs.svg#icon-location-big"></use>
         </svg>
       </div>
