--- a/products.html
+++ b/products.html
@@ -33,18 +33,34 @@
            <li class="list"><a href="./partner.html" class="link nav__link  nav__link-second text">Партнерам</a></li>
            <li class="list"><a href="./contacts.html" class="link nav__link nav__link-second  text">Контакти</a></li>
        </ul>
-       <button type="button" class="header__button header__button-second modal-open">Отримати пропозицію</button>
       </nav>
+      <button type="button" class="button__mobile__menu">
+       <svg class="icon__menu__mobile icon__menu__mobile-second"  width="24" height="24">
+         <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
+       </svg>
+     </button>
+      <button type="button" class="header__button header__button-second modal-open">Отримати пропозицію</button>
 
     </div>
  </header>
 
  <main>
-   <section class="container__orange product__container">
-    <div class="product__hero-container">
+   <section class="container__orange  product__container">
+    <div class=" container product__hero-container">
       <h2 class="product__hero-title" >Ми пропонуємо снеки</h2>
       <p class="title white">із зерен кукурудзи вищого сорту</p>
-      <img class="product__hero-image" src="./images/popcorn_orange.png" alt="popcorn with cheese">
+      <picture>
+        <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733132263/apero/products/hero/hero-desktop-1x-min_ba7efo.png 1x,
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1733132264/apero/products/hero/hero-desktop-2x-min_puoqls.png 2x" 
+        media="(min-width: 1440px)" />
+        <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733132264/apero/products/hero/hero-tablet-1x-min_guq4bu.png 1x,
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1733132264/apero/products/hero/hero-desktop-2x-min_puoqls.png 2x" 
+        media="(min-width: 744px) and (max-width: 1439px)" />
+        <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733131140/apero/products/hero/hero-mob-1x-min_auuaii.png 1x,
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1733131140/apero/products/hero/hero-mob-2x-min_dssobn.png 2x" 
+        media="(max-width: 743px)"/>
+       <img class="product__hero-image"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733131140/apero/products/hero/hero-mob-1x-min_auuaii.png"  alt="production"  />
+      </picture>
 
     </div>
   </section>
@@ -52,30 +68,30 @@
   <div class="marquee__text  product__row-container">
     <div class="product__row">
         <p class="title product__row-title">
-        <svg width="40" height="40" class="icon__circle">
+        <svg width="12" height="12" class="icon__circle">
           <use href="./images/symbol-defs.svg#icon-circle"></use>
         </svg> 100%   натуральний   
-        <svg width="40" height="40" class="icon__circle">
+        <svg width="12" height="12" class="icon__circle">
           <use href="./images/symbol-defs.svg#icon-circle"></use>
         </svg> 100%   натуральний  
-        <svg width="40" height="40" class="icon__circle">
+        <svg width="12" height="12" class="icon__circle">
           <use href="./images/symbol-defs.svg#icon-circle"></use>
         </svg> 100%   натуральний  
-        <svg width="40" height="40" class="icon__circle">
+        <svg width="12" height="12" class="icon__circle">
           <use href="./images/symbol-defs.svg#icon-circle"></use>
         </svg> 100%   натуральний
       </p>
       <p class="title product__row-title">
-        <svg width="40" height="40" class="icon__circle">
+        <svg width="12" height="12" class="icon__circle">
           <use href="./images/symbol-defs.svg#icon-circle"></use>
         </svg> 100%   натуральний   
-        <svg width="40" height="40" class="icon__circle">
+        <svg width="12" height="12" class="icon__circle">
           <use href="./images/symbol-defs.svg#icon-circle"></use>
         </svg> 100%   натуральний  
-        <svg width="40" height="40" class="icon__circle">
+        <svg width="12" height="12" class="icon__circle">
           <use href="./images/symbol-defs.svg#icon-circle"></use>
         </svg> 100%   натуральний  
-        <svg width="40" height="40" class="icon__circle">
+        <svg width="12" height="12" class="icon__circle">
           <use href="./images/symbol-defs.svg#icon-circle"></use>
         </svg>100%   натуральний
       </p>
@@ -83,8 +99,8 @@
   </div>
 
   <section class="container product__subhero-container">
-    <h2 class="title">Н<span class="product__subhero-title">аша продукція <span class="orange">не залишить байдужим</span> </br>навіть найвибагливіших гурманів</span></h2>
-    <h3 class="subtitle">Насолода гарантована, так як для виробництва </br>використовуються найкращі кукурудзяні зерна</h3>
+    <h2 class="title">Н<span class="product__subhero-title">аша продукція <span class="orange">не залишить байдужим</span> навіть найвибагливіших гурманів</span></h2>
+    <h3 class="subtitle product__subhero-subtitle">Насолода гарантована, так як для виробництва використовуються найкращі кукурудзяні зерна</h3>
   </section>
 
   <section class="container__grey">
