hero image index.html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,36 @@
      <section class="hero__section-container">
        <div class="swiper mySwiper">
         <!-- <div class="swiper-wrapper"> -->
+          <div class="swiper-slide hero__container-navy">
+            <div class="hero__container">
+              <div class="hero__text-container">
+                <h2 class="hero__title">отримайте смак</h2>
+                <h3 class="hero__subtitle">солоних пригод</h3>
+                <p class="hero__text subtitle">Попкорн АПЕРО не залишить байдужим <br/> навіть найвибагливіших гурманів</p>
+                <a href="./products.html" class="hero__link link">Переглянути асортимент
+                  <svg width="40" height="40" class="hero-svg">
+                    <use href="./images/symbol-defs.svg#icon-arrow-up-right"></use>
+                  </svg>
+                </a>
+              </div>
+              <div class="hero__image-container">
+                <div class="hero__image hero__image-navy">  </div>
+                <picture>
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193975/apero/hero/hero-desktop/hero-popSalt-desk-1x-min_d7kdow.png 1x,
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193977/apero/hero/hero-desktop/hero-popSalt-desk-2x-min_sxk4w1.png 2x" 
+                  media="(min-width: 1440px)" />
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194002/apero/hero/hero-tablet/hero-popSalt-tabblet-1x-min_wiaiq0.png 1x, 
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194004/apero/hero/hero-tablet/hero-popSalt-tabblet-2x-min_eab1fd.png 2x" 
+                  media="(min-width: 744px) and (max-width: 1439px)" />
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194099/apero/hero/hero-mob/hero-popSalt-mob-1x-min_msx9jo.png 1x, 
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194101/apero/hero/hero-mob/hero-popSalt-mob-2x-min_hddr2m.png 2x" 
+                  media="(max-width: 743px)" />
+               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194099/apero/hero/hero-mob/hero-popSalt-mob-1x-min_msx9jo.png" class="hero-image" alt="Navy popcorn"  />
+               </picture>
+                <!-- <img src="./images/popcorn_navy.png" alt="Navy popcorn" class="hero-image"> -->
+              </div>
+            </div>
+          </div>
           <div class="swiper-slide hero__container-orange">
             <div class="hero__container">
               <div class="hero__text-container">
@@ -80,7 +110,7 @@
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194097/apero/hero/hero-mob/hero-popCheese-mob-2x-min_cbydxv.png 2x" 
                   type="image/png"
                   media="(max-width: 743px)"/>
-               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194095/apero/hero/hero-mob/hero-popCheese-mob-1x-min_yecute.png"  alt="Orange popcorn"  />
+               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194095/apero/hero/hero-mob/hero-popCheese-mob-1x-min_yecute.png" class="hero-image" alt="Orange popcorn"  />
                </picture>
                 <!-- <img src="./images/popcorn_orange.png" alt="Orange popcorn" class="hero-image"> -->
               </div>
@@ -111,43 +141,13 @@
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194092/apero/hero/hero-mob/hero-popCaramel-mob-1x-min_ccvj0g.png 1x, 
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194094/apero/hero/hero-mob/hero-popCaramel-mob-2x-min_uxetqn.png 2x" 
                   media="(max-width: 743px)"/>
-               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194092/apero/hero/hero-mob/hero-popCaramel-mob-1x-min_ccvj0g.png"  alt="Violet popcorn" />
+               <img class="hero-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194092/apero/hero/hero-mob/hero-popCaramel-mob-1x-min_ccvj0g.png"  alt="Violet popcorn" />
                </picture>
                 <!-- <img src="./images/popcorn_violet.png" alt="Violet popcorn" class="hero-image"> -->
               </div>
             </div>
           </div>
         
-          <div class="swiper-slide hero__container-navy">
-            <div class="hero__container">
-              <div class="hero__text-container">
-                <h2 class="hero__title">отримайте смак</h2>
-                <h3 class="hero__subtitle">солоних пригод</h3>
-                <p class="hero__text subtitle">Попкорн АПЕРО не залишить байдужим <br/> навіть найвибагливіших гурманів</p>
-                <a href="./products.html" class="hero__link link">Переглянути асортимент
-                  <svg width="40" height="40" class="hero-svg">
-                    <use href="./images/symbol-defs.svg#icon-arrow-up-right"></use>
-                  </svg>
-                </a>
-              </div>
-              <div class="hero__image-container">
-                <div class="hero__image hero__image-navy">  </div>
-                <picture>
-                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193975/apero/hero/hero-desktop/hero-popSalt-desk-1x-min_d7kdow.png 1x,
-                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193977/apero/hero/hero-desktop/hero-popSalt-desk-2x-min_sxk4w1.png 2x" 
-                  media="(min-width: 1440px)" />
-                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194002/apero/hero/hero-tablet/hero-popSalt-tabblet-1x-min_wiaiq0.png 1x, 
-                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194004/apero/hero/hero-tablet/hero-popSalt-tabblet-2x-min_eab1fd.png 2x" 
-                  media="(min-width: 744px) and (max-width: 1439px)" />
-                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194099/apero/hero/hero-mob/hero-popSalt-mob-1x-min_msx9jo.png 1x, 
-                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194101/apero/hero/hero-mob/hero-popSalt-mob-2x-min_hddr2m.png 2x" 
-                  media="(max-width: 743px)" />
-               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194099/apero/hero/hero-mob/hero-popSalt-mob-1x-min_msx9jo.png"  alt="Navy popcorn"  />
-               </picture>
-                <!-- <img src="./images/popcorn_navy.png" alt="Navy popcorn" class="hero-image"> -->
-              </div>
-            </div>
-          </div>
   
           <div class="swiper-slide hero__container-green">
             <div class="hero__container">
@@ -173,7 +173,7 @@
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194088/apero/hero/hero-mob/hero-popButter-mob-1x-min_gauemx.png 1x, 
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194090/apero/hero/hero-mob/hero-popButter-mob-2x-min_yfs7om.png 2x" 
                   media="(max-width: 743px)" />
-               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194088/apero/hero/hero-mob/hero-popButter-mob-1x-min_gauemx.png"  alt="Green popcorn"  />
+               <img  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194088/apero/hero/hero-mob/hero-popButter-mob-1x-min_gauemx.png"  class="hero-image" alt="Green popcorn"  />
                </picture>
                 <!-- <img src="./images/popcorn_green.png" alt="Green popcorn" class="hero-image">   -->
               </div>
