--- a/products.html
+++ b/products.html
@@ -127,6 +127,18 @@
       <!-- <div > -->
         <ul class="product__list-container">
            <li class="list product__list popcorn__list">
+            <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243809/apero/products/popcorn/corn-micro-cheese-destop-1x-min_imp1wf.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243811/apero/products/popcorn/corn-micro-cheese-destop-2x-min_lqntlw.png 2x" 
+              media="(min-width: 1440px)" />
+              <!-- <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
+              media="(min-width: 744px) and (max-width: 1439px)" />
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor_-mob-1x-min_dss4mb.png 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor-mob-2x-min_ekgxbq.png 2x" 
+              media="(max-width: 743px)"/>
+             <img  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor_-mob-1x-min_dss4mb.png"  alt="production"  /> -->
+            </picture>
                <!-- <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/popcorn/popcorn-cheese.png" alt="" width="201" height="315"> -->
                <p class="subtitle product__list-subtitle">Попкорн зі смаком сиру</p>
                <div class="product__text-container">
